--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../normalize.css">
-    <link rel="stylesheet" href="../dist/styles/index.css">
-    <script src="https://unpkg.com/lodash@4.17.20"></script>
     <meta charset="utf-8">
     <title>1Lesson</title>
   </head>
   <body>
-    <main> 
+    <main>
 
         <div class="conteiner">
           <header>
-            <img src="../io.JPG" class="io" alt="">
+            <img src="./assets/io.JPG" class="io" alt="">
             <input type="checkbox"  id="check-menu" >
             <label for="check-menu">
               <span class="burger-line"></span>
@@ -297,9 +294,9 @@
           <div class="for_mail">
             <a href="mail:leonagency@mail.com">
                <strong>
-                leonagency@mail.com 
-               </strong> 
-              </a>  
+                leonagency@mail.com
+               </strong>
+              </a>
           </div>
           <div class="for_links">
 
