correcting markup, css

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="divservis_mini_txt">
-          <div class="big_txt">
+          <div class="big_txt-services">
             <b>services</b>
           </div>
           <div class="mini_txt">
@@ -192,7 +192,7 @@
         </div>
         <div class="portfolio">
           <div class="part">
-            <strong class="big_txt">portfolio</strong>
+            <strong class="big_txt-portfolio">portfolio</strong>
           </div>
           <div class="port_wor">
               If you do it right, it will last forever.
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div class="lorem_wight_screan">
-          <div class="big_txt">
+          <div class="big_txt-about">
             <div class="strong_word">
               <strong>about</strong>
             </div>
@@ -279,7 +279,7 @@
         </div>
         <div class="grayScrean">
           <div class="conteiner_for-grayScrean">
-          <div class="big_txt">
+          <div class="big_txt-contact">
             <strong class="strong_word">contact</strong>
           </div>
           <div class="create_word">
