--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="divservis_mini_txt">
-          <div class="big_txt-services">
+          <div class="big-txt__services">
             <b>services</b>
           </div>
           <div class="mini_txt">
@@ -107,7 +107,7 @@
           <div class="conteiner">
             <div class="list__wrapper">
               <div class="list">
-                <div class="list-item" >
+                <div class="list-item">
                   <div class="list-item__text">
                     <div class="flexForTxt">
                       <div class="list__image">
@@ -144,7 +144,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="list-item" style="margin-bottom: 80px; margin-top:-5px">
+                <div class="list-item">
                   <div class="list-item__text">
                     <div class="flexForTxt">
                       <div class="list__image">
@@ -162,13 +162,13 @@
                     </div>
                   </div>
                 </div>
-                <div class="list-item" style="margin-bottom: 80px; margin-top:-5px">
+                <div class="list-item">
                   <div class="list-item__text">
                     <div class="flexForTxt">
                       <div class="list__image">
                         <i class="fa-solid fa-desktop"></i>
                       </div>
-                      <div class="main_word_list" style="margin-left:30px">
+                      <div class="main_word_list">
                       <strong>Web Development</strong>
                     </div>
                     </div>
@@ -192,7 +192,7 @@
         </div>
         <div class="portfolio">
           <div class="part">
-            <strong class="big_txt-portfolio">portfolio</strong>
+            <strong class="big-txt__portfolio">portfolio</strong>
           </div>
           <div class="port_wor">
               If you do it right, it will last forever.
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div class="lorem_wight_screan">
-          <div class="big_txt-about">
+          <div class="big-txt__about">
             <div class="strong_word">
               <strong>about</strong>
             </div>
@@ -279,7 +279,7 @@
         </div>
         <div class="grayScrean">
           <div class="conteiner_for-grayScrean">
-          <div class="big_txt-contact">
+          <div class="big-txt__contact">
             <strong class="strong_word">contact</strong>
           </div>
           <div class="create_word">
