--- a/src/index.html
+++ b/src/index.html
@@ -96,9 +96,9 @@
           </div>
         </div>
         <div class="divservis_mini_txt">
-          <div class="big-txt__services">
-            <b>services</b>
-          </div>
+          <div class="big__txt__services">
+              <b>services</b>
+            </div>
           <div class="mini_txt">
             Don't be busy, be productive
           </div>
@@ -192,7 +192,7 @@
         </div>
         <div class="portfolio">
           <div class="part">
-            <strong class="big-txt__portfolio">portfolio</strong>
+            <strong class="big__txt__portfolio">portfolio</strong>
           </div>
           <div class="port_wor">
               If you do it right, it will last forever.
@@ -234,16 +234,13 @@
           </div>
         </div>
         <div class="lorem_wight_screan">
-          <div class="big-txt__about">
+          <div class="big__txt__about">
             <div class="strong_word">
               <strong>about</strong>
             </div>
           </div>
           <div class="main_word_loerm">
-            <div class="word_for_lorem_main" style="
-            display: flex;
-            justify-content: center;
-            margin-top: -48px;">
+            <div class="word_for_lorem_main">
               Less is more work
             </aside>
           </div>
@@ -279,7 +276,7 @@
         </div>
         <div class="grayScrean">
           <div class="conteiner_for-grayScrean">
-          <div class="big-txt__contact">
+          <div class="big__txt__contact">
             <strong class="strong_word">contact</strong>
           </div>
           <div class="create_word">
