--- a/src/index.html
+++ b/src/index.html
@@ -95,8 +95,8 @@
             </div>
           </div>
         </div>
-        <div class="divservis_mini_txt">
-          <div class="big__txt__services">
+        <div class="divservis-mini-txt">
+          <div class="divservis-mini-txt big-txt-services">
               <b>services</b>
             </div>
           <div class="mini_txt">
@@ -192,7 +192,7 @@
         </div>
         <div class="portfolio">
           <div class="part">
-            <strong class="big__txt__portfolio">portfolio</strong>
+            <strong class="divservis-mini-txt big-txt-portfolio">portfolio</strong>
           </div>
           <div class="port_wor">
               If you do it right, it will last forever.
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div class="lorem_wight_screan">
-          <div class="big__txt__about">
+          <div class="divservis-mini-txt big-txt-about">
             <div class="strong_word">
               <strong>about</strong>
             </div>
@@ -276,7 +276,7 @@
         </div>
         <div class="grayScrean">
           <div class="conteiner_for-grayScrean">
-          <div class="big__txt__contact">
+          <div class="divservis-mini-txt big-txt-contact">
             <strong class="strong_word">contact</strong>
           </div>
           <div class="create_word">
