--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
             </div>
           </div>
         </div>
-        <div class="portfolio">
+        <div class="grayScrean">
           <div class="part">
             <strong class="divservis-mini-txt__big-txt">portfolio</strong>
           </div>
