--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
           <div class="divservis-mini-txt__big-txt">
               <b>services</b>
             </div>
-          <div class="mini_txt">
+          <div class="mini-txt-for-services">
             Don't be busy, be productive
           </div>
         </div>
@@ -109,17 +109,17 @@
               <div class="list">
                 <div class="list-item">
                   <div class="list-item__text">
-                    <div class="flexForTxt">
+                    <div class="flex-For-Txt">
                       <div class="list__image">
                         <i class="fa-solid fa-print"></i>
                       </div>
-                      <div class="main_word_list">
+                      <div class="main-word-list">
                         <strong>
                           Graphic Design
                         </strong>
                       </div>
                     </div>
-                    <div class="content_list">
+                    <div class="content-list">
                       Graphic design is the process of visual
                       communication and problem-solving
                       using one or more of typography,
@@ -129,15 +129,15 @@
                 </div>
                 <div class="list-item" >
                   <div class="list-item__text">
-                    <div class="flexForTxt">
+                    <div class="flex-For-Txt">
                       <div class="list__image">
                         <i class="fa-regular fa-window-maximize"></i>
                       </div>
-                      <div class="main_word_list">
+                      <div class="main-word-list">
                         <strong>Web Design</strong>
                       </div>
                     </div>
-                    <div class="content_list">
+                    <div class="content-list">
                       Web design encompasses many different
                       skills and disciplines in the production
                       and maintenance of websites.
@@ -146,15 +146,15 @@
                 </div>
                 <div class="list-item">
                   <div class="list-item__text">
-                    <div class="flexForTxt">
+                    <div class="flex-For-Txt">
                       <div class="list__image">
                         <i class="fa-solid fa-message"></i>
                       </div>
-                      <div class="main_word_list">
+                      <div class="main-word-list">
                         <strong>UI & UX</strong>
                       </div>
                     </div>
-                    <div class="content_list">
+                    <div class="content-list">
                       Process of enhancing user satisfaction
                       with a product by improving the
                       usability, accessibility, and pleasure
@@ -164,15 +164,15 @@
                 </div>
                 <div class="list-item">
                   <div class="list-item__text">
-                    <div class="flexForTxt">
+                    <div class="flex-For-Txt">
                       <div class="list__image">
                         <i class="fa-solid fa-desktop"></i>
                       </div>
-                      <div class="main_word_list">
+                      <div class="main-word-list">
                       <strong>Web Development</strong>
                     </div>
                     </div>
-                    <div class="content_list">
+                    <div class="content-list">
                       Web development is a broad term for
                       the work involved in developing a web site
                       for the Internet or an intranet.
@@ -184,7 +184,7 @@
                 <div class="imger" style="z-index:1">
                   <img src="">
                 </div>
-                <div class="black_stick">
+                <div class="black-stick">
                 </div>
               </div>
             </div>
@@ -194,12 +194,12 @@
           <div class="part">
             <strong class="divservis-mini-txt__big-txt">portfolio</strong>
           </div>
-          <div class="port_wor">
+          <div class="port-wor">
               If you do it right, it will last forever.
           </div>
           <div class="blocFor">
-            <div class="port_img">
-              <div class="immm">
+            <div class="portfolio-img">
+              <div class="portfolio-img__imeg">
               </div>
               <div class="prod">
               </div>
@@ -209,8 +209,8 @@
                 manifest in so many surprising and.
               </p>
             </div>
-            <div class="port_img">
-              <div class="immm">
+            <div class="conteiner-for-portfolio">
+              <div class="portfolio-img__imeg">
               </div>
               <div class="prod">
                 <strong>Project Here</strong>
@@ -220,8 +220,8 @@
                 manifest in so many surprising and.
               </p>
             </div>
-            <div class="port_img">
-              <div class="immm">
+            <div class="conteiner-for-portfolio">
+              <div class="portfolio-img__imeg">
               </div>
               <div class="prod">
                 <b>Project Here</b>
