--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <main>
-
         <div class="conteiner">
           <header>
             <img src="./assets/io.JPG" class="io" alt="">
@@ -23,7 +22,7 @@
               <span class="burger-line"></span>
               <span class="burger-line"></span>
               <span class="burger-line"></span>
-          </label>
+            </label>
             <nav class="main-menu">
               <a href="#">Home</a>
               <a href="#">Servis</a>
@@ -31,7 +30,7 @@
               <a href="#">About</a>
             </nav>
           </header>
-      </div>
+       </div>
     <div class="content">
       <div class="first-words">
           <h1>
@@ -95,21 +94,22 @@
             </div>
           </div>
         </div>
-        <div class="divservis-mini-txt">
-          <div class="divservis-mini-txt__big-txt">
-              <b>services</b>
-            </div>
-          <div class="mini-txt-for-services">
+        <div class="block-services">
+          <div class="divservis-mini-txt">
+            <div class="divservis-mini-txt__big-txt">
+                <b>services</b>
+              </div>
+            <div class="mini-txt-for-services">
             Don't be busy, be productive
+            </div>
           </div>
-        </div>
-        <div class="adaptiv_conteiner">
-          <div class="conteiner">
-            <div class="list__wrapper">
-              <div class="list">
-                <div class="list-item">
-                  <div class="list-item__text">
-                    <div class="flex-For-Txt">
+          <div class="adaptiv_conteiner">
+            <div class="conteiner">
+              <div class="list__wrapper">
+               <div class="list">
+                  <div class="list-item">
+                    <div class="list-item__text">
+                     <div class="flex-For-Txt">
                       <div class="list__image">
                         <i class="fa-solid fa-print"></i>
                       </div>
@@ -120,10 +120,10 @@
                       </div>
                     </div>
                     <div class="content-list">
-                      Graphic design is the process of visual
-                      communication and problem-solving
-                      using one or more of typography,
-                      photography and illustration.
+                      Graphic design is the process of visual <br>
+                      communication and problem-solving <br>
+                      using one or more of typography, <br>
+                      photography and illustration. 
                     </div>
                   </div>
                 </div>
@@ -190,6 +190,7 @@
             </div>
           </div>
         </div>
+      </div>
         <div class="grayScrean">
           <div class="part">
             <strong class="divservis-mini-txt__big-txt">portfolio</strong>
@@ -198,7 +199,7 @@
               If you do it right, it will last forever.
           </div>
           <div class="blocFor">
-            <div class="portfolio-img">
+            <div class="conteiner-for-portfolio">
               <div class="portfolio-img__imeg">
               </div>
               <div class="prod">
@@ -233,7 +234,7 @@
             </div>
           </div>
         </div>
-        <div class="lorem_wight_screan">
+        <div class="block-about">
           <div class="divservis-mini-txt__big-txt">
             <div class="strong_word">
               <strong>about</strong>
@@ -273,6 +274,7 @@
                 </div>
               </div>
             </div>
+          </div>
         </div>
         <div class="grayScrean">
           <div class="conteiner_for-grayScrean">
@@ -325,7 +327,6 @@
       </div>
     </footer>
     <script src="index.js"></script>
-
     <script src="https://kit.fontawesome.com/8cf71a9412.js" crossorigin="anonymous"></script>
     <script src="./node_modules/jquery/dist/jquery.min.js" > </script>
     </body>
