--- a/src/index.html
+++ b/src/index.html
@@ -95,8 +95,8 @@
           </div>
         </div>
         <div class="block-services">
-          <div class="divservis-mini-txt">
-            <div class="divservis-mini-txt__big-txt">
+          <div class="divservis-txt">
+            <div class="divservis-txt__big-txt">
                 <b>services</b>
               </div>
             <div class="mini-txt-for-services">
@@ -180,20 +180,21 @@
                   </div>
                 </div>
               </div>
-              <div class="img2">
-                <div class="imger" style="z-index:1">
-                  <img src="">
-                </div>
-                <div class="black-stick">
-                </div>
-              </div>
+              
+          </div>
+          <div class="img2">
+            <div class="imger" style="z-index:1">
+              <img src="">
             </div>
+            <div class="black-stick">
+            </div>
+          </div>
           </div>
         </div>
       </div>
         <div class="grayScrean">
           <div class="part">
-            <strong class="divservis-mini-txt__big-txt">portfolio</strong>
+            <strong class="divservis-txt__big-txt">portfolio</strong>
           </div>
           <div class="port-wor">
               If you do it right, it will last forever.
@@ -235,7 +236,7 @@
           </div>
         </div>
         <div class="block-about">
-          <div class="divservis-mini-txt__big-txt">
+          <div class="divservis-txt__big-txt">
             <div class="strong_word">
               <strong>about</strong>
             </div>
@@ -278,7 +279,7 @@
         </div>
         <div class="grayScrean">
           <div class="conteiner_for-grayScrean">
-          <div class="divservis-mini-txt__big-txt">
+          <div class="divservis-txt__big-txt">
             <strong class="strong_word">contact</strong>
           </div>
           <div class="create_word">
